--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@
     height: calc( ((100vh - 75px) / 16));
     vertical-align: middle;
     line-height: calc( ((100vh - 75px) / 16));
+    background-color: rgba(255, 255, 255);
 }
 
 .products-open {
