--- a/style.css
+++ b/style.css
@@ -3,7 +3,9 @@
     text-align: center;  
     font-size: 25px;
     font-family: 'Roboto Slab', serif;
-    height: calc((100vh - 65px) / 9);
+    vertical-align: middle;
+    height: calc((100vh - 65px) / 8);
+    line-height: calc((100vh - 65px) / 8);
 }
 
 .mobile-nav-row-2 {
@@ -11,10 +13,13 @@
     text-align: center;  
     font-size: 25px;
     font-family: 'Roboto Slab', serif;
-    height: calc((100vh - 65px) / 9);
+    vertical-align: middle;
+    line-height: calc((100vh - 65px) / 8);
+    height: calc((100vh - 65px) / 8);
 }
 .resize {
     height: calc((100vh - 65px) / 13); 
+    line-height:  calc((100vh - 65px) / 13); 
 }
 
 .products-row-info {
@@ -28,7 +33,7 @@
 }
 
 .products-open {
-    height: calc((100vh - 65px) / 1.7);
+    height: calc((100vh - 65px) / 1.65);
 }
 
 .navbar-mobile {
