--- a/style.css
+++ b/style.css
@@ -95,7 +95,13 @@ body{
     width: 50%;
     font-family: 'Roboto', sans-serif;
 }
-
+.rotated {
+    transform: rotate(180deg);
+    -ms-transform: rotate(180deg); /* IE 9 */
+    -moz-transform: rotate(180deg); /* Firefox */
+    -webkit-transform: rotate(180deg); /* Safari and Chrome */
+    -o-transform: rotate(180deg); /* Opera */
+  }
 .nav-info-container{
     -webkit-transition: max-height .5s; 
     -moz-transition: max-height .5s; 
