--- a/style.css
+++ b/style.css
@@ -98,7 +98,8 @@ body{
 
 #products-arrow {   
     -webkit-transition: -webkit-transform .3s ease-in-out;
-    transition:         transform .3s ease-in-out;}
+    transition: transform .3s ease-in-out;
+}
 .rotated {
     transform: rotate(180deg);
     -ms-transform: rotate(180deg); /* IE 9 */
@@ -141,7 +142,7 @@ body{
 
 #nav-icon3{
 
-    width: 45px;
+    width: 40px;
     height: 20px;
     position: relative;
     float: right;
