--- a/style.css
+++ b/style.css
@@ -140,7 +140,7 @@ body{
 }
 
 
-#nav-icon3{
+#nav-icon{
 
     width: 40px;
     height: 20px;
@@ -157,7 +157,7 @@ body{
     transition: .75s ease-in-out;
     cursor: pointer;
   }
-  #nav-icon3 span {
+  #nav-icon span {
     display: block;
     position: absolute;
     height: 5px;
@@ -178,39 +178,39 @@ body{
 
   /* Icon 3 */
 
-#nav-icon3 span:nth-child(1) {
+#nav-icon span:nth-child(1) {
     top: 0px;
   }
   
-  #nav-icon3 span:nth-child(2),#nav-icon3 span:nth-child(3) {
+  #nav-icon span:nth-child(2),#nav-icon span:nth-child(3) {
     top: 10px;
   }
   
-  #nav-icon3 span:nth-child(4) {
+  #nav-icon span:nth-child(4) {
     top: 20px;
   }
   
-  #nav-icon3.open span:nth-child(1) {
+  #nav-icon.open span:nth-child(1) {
     top: 15px;
     width: 0%;
     left: 50%;
   }
   
-  #nav-icon3.open span:nth-child(2) {
+  #nav-icon.open span:nth-child(2) {
     -webkit-transform: rotate(45deg);
     -moz-transform: rotate(45deg);
     -o-transform: rotate(45deg);
     transform: rotate(45deg);
   }
   
-  #nav-icon3.open span:nth-child(3) {
+  #nav-icon.open span:nth-child(3) {
     -webkit-transform: rotate(-45deg);
     -moz-transform: rotate(-45deg);
     -o-transform: rotate(-45deg);
     transform: rotate(-45deg);
   }
   
-  #nav-icon3.open span:nth-child(4) {
+  #nav-icon.open span:nth-child(4) {
     top: 18px;
     width: 0%;
     left: 50%;
